event card and page footer adjustement

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@ code {
     monospace;
 }
 
+.responsive {
+  width: 25%;
+  height: auto;
+}
+
+.footerLogo{
+  width: 15vw;
+  height: auto;
+}
+
