--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
 
 body {
   margin: 0;
+  /*
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -45,7 +47,7 @@ code {
 
 .footer #container{
   display: flex;
-  justify-content: space-around;
+  justify-content:flex-start;
   margin-inline: 15vw;
   padding: 3vh;
 }
@@ -63,22 +65,20 @@ code {
 
 #leftfooter p{
   color: aliceblue;
-  font-family: 'Segoe UI';
   font-size: 90%;
 }
 
 #middlefooter{
   margin-inline: 5vw;
-
 }
 
 #middlefooter p,h1{
   color: azure;
 }
 
+
 .footerContainer{
-  display:ruby;
-  justify-items: center;
+  display:block;
 }
 
 #copyright{
@@ -86,6 +86,9 @@ code {
   position: relative;
   background-color: black;
   padding-inline: 41.5%;
+  padding-block: 1vw;
+  font-size:x-small;
+
 }
 
 /*other logo*/
